--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.1.9",
